syntax = "proto3";

option java_package = "cn.aberic.fabric-client.grpc.proto.ca";
option java_outer_classname = "EnumsProto";
option go_package = "grpc/proto/ca";

package ca;

enum Code {
    Success = 0;
    Fail = 1;
}

// CryptoType 密钥生成类型：ECDSA=0；RSA=1
enum CryptoType {
    ECDSA = 0;
    RSA = 1;
}

// EccAlgorithm ECDSA密钥长度
enum EccAlgorithm {
    p256 = 0;
    p384 = 1;
    p521 = 2;
}

// RsaAlgorithm RSA密钥长度
enum RsaAlgorithm {
    r2048 = 0;
    r4096 = 1;
}

// SignAlgorithm 传输签名算法
enum SignAlgorithm {
    SHA256WithRSA = 0;
    SHA512WithRSA = 1;
    ECDSAWithSHA256 = 2;
    ECDSAWithSHA384 = 3;
    ECDSAWithSHA512 = 4;
}