syntax = "proto3";

option java_package = "cn.aberic.fabric-client.grpc.proto.ca";
option java_outer_classname = "ServerProto";
option go_package = "grpc/proto/ca";

package ca;

import "grpc/proto/ca/cert.proto";

// 证书生成服务
service Generate {
    // 生成根密钥、tls密钥及两者自签名根证书内容
    rpc GenerateRootCrypto (ReqRootCrypto) returns (RespRootCrypto) {
    }
    // 生成密钥对
    rpc GenerateCrypto (ReqCrypto) returns (RespCrypto) {
    }
    // 生成组织下子节点/用户CA请求证书文件
    rpc SignCertificate (ReqSignCertificate) returns (RespSignCertificate) {
    }
}